[package]
name = "shared-memory-broker"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A high-performance shared memory broker for pub/sub communication"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/shared-memory-broker"

[dependencies]
shared_memory = "0.12"
thiserror = "1.0"
parking_lot = "0.12"
memmap2 = "0.5"
crossbeam = "0.8"
tokio = { version = "1.0", features = ["full"] }
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bytes = "1.0"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
criterion = "0.4"
tokio-test = "0.4"
tracing-test = "0.2"
rand = "0.8"
lazy_static = "1.4"

[[bench]]
name = "throughput"
harness = false 